Add user script for navigation from Jira

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </div>
 
     <footer>
-      <a href="https://github.com/greenpeace/planet4-test-swarm" target="_blank">source code</a>
+      <a href="https://github.com/greenpeace/planet4-test-swarm" target="_blank">source code</a> | 
+      <a href="https://github.com/greenpeace/planet4-test-swarm/tree/master/static/scripts/jira-test-env-links.js">Jira script</a>
     </footer>
   </div>
 
