Add a note to explain colors

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <div class="three-quarters" id="spinner-people">loading...</div>
     </div>
 
+    <div class="note" id="note">
+      <div class="on"><span class="box"></span> available</div>
+      <div class="off"><span class="box"></span> in use</div>
+    </div>
+
     <footer>
       <a href="https://github.com/greenpeace/planet4-test-swarm" target="_blank">source code</a> | 
       <a href="https://github.com/greenpeace/planet4-test-swarm/tree/master/static/scripts/jira-test-env-links.js">Jira script</a>
