--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
     </div>
 
     <div class="note" id="note">
-      <div class="on"><span class="box"></span> available</div>
-      <div class="off"><span class="box"></span> in use</div>
+      <div class="status">
+        <div class="on"><span class="box"></span> available</div>
+        <div class="off"><span class="box"></span> in use</div>
+      </div>
+      <div class="links">
+        <div><a href="https://github.com/greenpeace/planet4-test-swarm" target="_blank">Source Code</a></div>
+        <div><a href="https://github.com/greenpeace/planet4-test-swarm/tree/master/static/scripts/jira-test-env-links.js">Jira Script</a></div>
+      </div>
     </div>
 
     <footer>
-      <a href="https://github.com/greenpeace/planet4-test-swarm" target="_blank">source code</a> | 
-      <a href="https://github.com/greenpeace/planet4-test-swarm/tree/master/static/scripts/jira-test-env-links.js">Jira script</a>
     </footer>
   </div>
 
